# term-hero

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: main.rs
