[package]
name = "term-hero"
version = "0.1.0"
authors = ["Antony David <antonydavid945@gmail.com>"]
repository = "https://github.com/Jayllyz/term-hero"
license = "MIT"
edition = "2021"

[dependencies]
ratatui = "0.27.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
